gitops/platform/base/cert-manager/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cert-manager
  ingress:
    # Prometheus scraping metrics
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9402"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # K8s API server
    - toEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # Let's Encrypt ACME
    - toCIDRSet:
        - cidr: "0.0.0.0/0"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Scaleway webhook for DNS-01 challenge
    - toEndpoints:
        - matchLabels:
            app: scaleway-certmanager-webhook
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-cainjector
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cainjector
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # K8s API server
    - toEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: webhook
  ingress:
    # Managed Kapsule API server calls admission webhooks
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # K8s API server
    - toEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: scaleway-certmanager-webhook
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app: scaleway-certmanager-webhook
  ingress:
    # cert-manager calls this webhook for DNS-01 challenges
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cert-manager
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Scaleway DNS API
    - toCIDRSet:
        - cidr: "51.159.62.140/32"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
